<resources>
    <string name="default_app_title">هنرنما</string>
    <string name="username_hint">آدرس ایمیل</string>
    <string name="password_hint">رمز عبور</string>
    <string name="current_password_hint">رمز عبور فعلی</string>
    <string name="new_password_hint">رمز عبور جدید</string>
    <string name="confirm_password_hint">تکرار رمز عبور</string>
    <string name="alter_password">تغییر رمز عبور</string>
    <string name="resend_verification_docs">ارسال مجدد مدارک</string>
    <string name="enter_button">ورود</string>
    <string name="forgot_password">رمز عبور خود را فراموش کرده‌اید؟</string>
    <string name="not_verified">شما هنوز حساب کاربری خود را فعال نکرده‌اید. در صورتی که ایمیلی
        دریافت نکردید، پوشه‌ی spam یا هرزنامه را نیز بررسی کنید.
    </string>
    <string name="resend_telegram">ارسال کد از طریق تلگرام</string>
    <string name="login_using_telegram">ورود از طریق تلگرام</string>
    <string name="action_settings">تنظیمات</string>
    <string name="title_activity_register">ثبت‌نام</string>
    <string name="name_hint">نامی برای خود انتخاب کنید.</string>
    <string name="register_form_subtitle">
        وارد کردن اطلاعات مربوط به فیلدهای ستاره‌دار الزامی است.
    </string>
    <string name="register_form_name_alert">
        نام‌ها در هنرنما به صورت عمومی نمایش داده می‌شوند.
    </string>
    <string name="select_activation_method">*ساخت حساب توسط:</string>
    <string name="email_address_hint">آدرس ایمیل - مثال: your_name@yahoo.com</string>
    <string name="mobile_number_hint">شماره تلفن همراه - مثال: 09123456789</string>
    <string name="add_national_card_image_text">* افزودن تصویر کارت ملی:</string>
    <string name="register_card_number_alert_text">نام صاحب شماره کارت باید با اطلاعات کارت ملی
        مطابقت داشته باشد.
    </string>
    <string name="register">ثبت‌نام</string>
    <string name="shetab_catd_number_hint_text">شماره کارت عضو شتاب</string>
    <string name="send_register_activation_link_to_email">
        آدرس ایمیل
    </string>
    <string name="send_register_activation_link_to_telegram">حساب تلگرام</string>
    <string name="select_national_card_image_dialog_title">انتخاب تصویر</string>
    <string name="family_name">نام خانوادگی</string>
    <string name="image_selector_error_no_camera">برنامه‌ای برای گرفتن عکس پیدا نشد</string>
    <string name="image_selector_option_text_capture">دوربین</string>
    <string name="image_selector_option_text_select">انتخاب از گالری</string>
    <string name="image_selector_option_text_remove">حذف تصویر</string>
    <string name="telegram_activation_dialog_title">فعال‌سازی حساب تلگرام</string>
    <string name="telegram_activation_option_text">ارسال پیغام از طریق تلگرام این دستگاه</string>
    <string name="error_email_not_set">"فیلد آدرس ایمیل نمی‌تواند خالی باشد. "
    </string>
    <string name="error_email_address_is_not_valid">" آدرس ایمیل معتبر نیست. "</string>
    <string name="error_mobile_number_field_can_not_be_empty">" فیلد شماره تلفن همراه نمی‌تواند خالی
        باشد.
        "
    </string>
    <string name="error_mobile_number_is_not_valid">" شماره تلفن همراه معتبر نیست. "</string>
    <string name="error_password_field_can_not_be_empty">" فیلد رمز عبور نمی‌تواند خالی باشد. "
    </string>
    <string name="error_confirm_password_field_cant_be_empty">" فیلد تکرار رمز عبور نمی‌تواند خالی
        باشد.
        "
    </string>
    <string name="error_password_and_confirmpassword_does_not_match">" مقدار فیلد رمز عبور و تکرار
        آن یکی
        نیست. "
    </string>
    <string name="error_national_card_image_is_not_set">" تصویر کارت ملی انتخاب نشده است. "</string>
    <string name="error_bank_card_number_cant_be_empty">" شماره کارت عضو شتاب نمی‌تواند خالی باشد. "
    </string>
    <string name="error_bank_card_number_is_not_valid">" شماره کارت عضو شتاب معتبر نیست. "</string>
    <string name="error_login_username_is_empty">
        آدرس ایمیلی که با آن ثبت‌نام کرده‌اید را وارد کنید.
    </string>
    <string name="error_register_password_is_empty">"فیلد رمز عبور خالی است. "</string>
    <string name="error_login_wrong_username">نام کاربری یا رمز عبور اشتباه است.</string>
    <string name="error_login_failed">خطا در ورود به حساب.</string>
    <string name="error_network_is_not_enabled">دستگاه شما به اینترنت متصل نیست.</string>
    <string name="error_no_internet_connection">مشکل در برقراری ارتباط. لطفا کیفیت اینترنت خود را
        بررسی کنید.
    </string>
    <string name="check_net_connection">" لطفا اینترنت دستگاه خود را بررسی کنید. "
    </string>
    <string name="sending_data">" در حال ارسال اطلاعات... "</string>
    <string name="syncing_data">در حال همگام‌سازی اطلاعات</string>
    <string name="error_signup_duplicated_email">" ایمیل وارد شده پیشتر ثبت شده است. "</string>
    <string name="error_signup_duplicated_mobile_number">" شماره تلفن همراه وارد شده پیشتر ثبت شده
        است. "
    </string>
    <string name="error_signup_correct_mistakes_and_try_again">لطفا خطاهای رخ داده را تصحیح و دوباره
        تلاش کنید.
    </string>
    <string name="successful_signup">" ثبت‌نام با موفقیت انجام شد "</string>
    <string name="error_login_you_are_not_shop_owner">شما هنوز حساب فروشندگان هنرنما ندارید.
    </string>
    <string name="error_login_invalid_user_or_password">نام کاربری یا رمز عبور اشتباه است.</string>
    <string name="seller_profile">" اطلاعات شما "</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="exit_account">خروج از حساب</string>
    <string name="exit_from_editing_dialog_title">در حال ویرایش یک محصول</string>
    <string name="exit_from_editing_option_dont_exit">باقی ماندن در صفحه</string>
    <string name="exit_from_editing_option_exit">بی‌خیال تغییرات!</string>
    <string name="title_activity_edit_item">ویرایش محصول</string>
    <string name="edit_item_photos_title">تصاویر</string>
    <string name="edit_item_photos_description">حداقل یک عکس از محصول خود بگذارید.</string>
    <string name="edit_item_details_title">مشخصات</string>
    <string name="edit_item_details_description">به جهانیان محصولتان را معرفی کنید و بگویید که چرا
        قراره عاشقش شوند.
    </string>
    <string name="edit_item_title_hint">عنوان محصول</string>
    <string name="edit_item_title_sub_hint">از کلماتی استفاده کنید که کاربران در جستجوی خود به کار
        می‌برند.
    </string>
    <string name="edit_item_description_hint">توضیحات</string>
    <string name="error_edit_item_title_is_empty">فیلد عنوان خالی است.</string>
    <string name="error_edit_item_description_is_empty">فیلد توضیحات خالی است.</string>
    <string name="error_category_is_not_selected">دسته‌بندی آگهی انتخاب نشده است.</string>
    <string name="error_edit_item_no_image">حداقل یک عکس اجباریست.</string>
    <string name="edit_item_save">ذخیره</string>
    <string name="edit_item_done">محصول شما با موفقیت ذخیره شد.</string>
    <string name="error_saving_item">"خطا در هنگام ذخیره‌سازی محصول."</string>
    <string name="item_not_changed">
        از آخرین ذخیره‌سازی تغییری در اطلاعات ایجاد نشده است.
    </string>
    <string name="error_getting_item_info">خطا در گرفتن اطلاعات محصول.</string>
    <string name="error_sending_images">خطا در ارسال تصاویر. لطفا دوباره تلاش کنید</string>
    <string name="please_wait">لطفاً چند لحظه صبر کنید.</string>
    <string name="alter_name">تغییر نام</string>
    <string name="successfully_changed_user_info">اطلاعات شما با موفقیت تغییر کرد.</string>
    <string name="choose_category_dialog_title">انتخاب دسته‌ی آگهی</string>
    <string name="choose_event_cat">انتخاب دسته‌بندی رویداد</string>
    <string name="syncing_data_failed">خطا در به‌روزرسانی اطلاعات. لطفا اینترنت دستگاه خود را بررسی
        کنید.
    </string>
    <string name="receiving_data">در حال دریافت اطلاعات</string>
    <string name="still_no_account">هنوز حساب کاربری ندارید؟</string>
    <string name="register_account">ساخت حساب کاربری</string>
    <string name="send">ارسال</string>
    <string name="error_name_not_set">فیلد نام نمی‌تواند خالی باشد.</string>
    <string name="verification_email_sent">
        لینک فعال‌سازی و ورود به حساب به آدرس ایمیلتان ارسال شد. در صورت عدم فعال‌سازی
        حساب در طول ۲۴ ساعت آتی، حساب شما به صورت خودکار حذف خواهد شد.
    </string>
    <string name="telegram_activation_timeout_message">در صورتی که حساب خود
        را در طول ۲۴ ساعت آتی فعال نکنید، حساب شما به صورت خودکار خذف خواهد شد.
    </string>
    <string name="alter_info">تغییر اطلاعات</string>
    <string name="message_altering_profile_Failed">خطایی در زمان تغییر اطلاعات رخ داد.</string>
    <string name="select_province">انتخاب استان</string>
    <string name="select_city">انتخاب شهر</string>
    <string name="getting_store_info_failed">
        خطا در دریافت اطلاعات فروشگاه.
    </string>
    <string name="getting_city_list_failed">
        خطا در نمایش فهرست شهرها.
    </string>
    <string name="error_getting_province_list">
        خطا در نمایش فهرست استان‌ها.
    </string>
    <string name="select">انتخاب</string>
    <string name="getting_information">در حال گرفتن اطلاعات...</string>
    <string name="error_finding_category_name">خطا در دریافت اطلاعات دسته‌بندی.</string>
    <string name="error_getting_items_list">خطا در گرفتن فهرست محصولات.</string>
    <string name="item_not_found">"محصولی یافت نشد."</string>
    <string name="store_not_found">فروشگاهی یافت نشد.</string>
    <string name="event_not_found">رویدادی یافت نشد.</string>
    <string name="account_not_found">"حساب کاربری یافت نشد."</string>
    <string name="not_allowed_to_do_this_action">شما مجاز به این عمل نیستید.</string>
    <string name="please_try_again">" لطفا دوباره تلاش کنید. "</string>
    <string name="error_displaying_image">خطا در نمایش تصویر.</string>
    <string name="connect_to_see_most_updated_info">برای مشاهده به‌روزترین اطلاعات دستگاه خود را
        به اینترنت متصل کنید.
    </string>
    <string name="error_displaying_store_logo">خطا در نمایش تصویر لوگو.</string>
    <string name="error_displaying_store_banner">خطا در نمایش تصویر بنر.</string>
    <string name="privacy_policy_notfi">
        استفاده از هنزنما و ساخت حساب کاربری در آن به معنای موافقت شما با
        <a href="https://www.honarnama.net/terms">قوانین هنرنما</a>
        است.
    </string>
    <string name="wont_specify">مشخص نمی‌کنم</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="item_price">قیمت محصول</string>
    <string name="error_stablishing_connection">خطا در برقراری ارتباط</string>
    <string name="retry">تلاش مجدد</string>
    <string name="province">استان</string>
    <string name="city_label">شهر:</string>
    <string name="provine_label">استان:</string>
    <string name="city">شهر</string>
    <string name="contact_info">اطلاعات تماس</string>
    <string name="rules">قوانین</string>
    <string name="about_us">درباره‌ی هنرنما</string>
    <string name="support_us">حمایت از هنرنما</string>
    <string name="share_us">معرفی به دوستان</string>
    <string name="contact_us">تماس با ما</string>
    <string name="contact_text">در صورت بروز هرگونه مشکل و یا برای ارائه‌ی پیشنهادات و انتقادات خود،
        با تیم پشتیبانی هنرنما از طریق پر کردن فرم زیر و ارسال آن یا فرستادن ایمیل به آدرس
        <a href="mailto:support@honarnama.net">salam@honarnama.net</a>
        در ارتباط باشید.
    </string>
    <string name="contact_no">شماره تماس</string>
    <string name="contact_body">متن پیام</string>
    <string name="contact_sent_successfully">پیام شما با موفقیت ارسال شد. با تشکر.</string>
    <string name="error_occured">خطا در دریافت اطلاعات.</string>
    <string name="sending">در حال ارسال...</string>
    <string name="uncaught_exception_msg">متاسفانه خطایی رخ داد. این مشکل در نسخه بعد برطرف خواهد
        شد.
    </string>
    <string name="hornama">هنرنما</string>
    <string name="send_device_info">ارسال مشخصات دستگاه</string>
    <string name="no_data_found">داده‌ای پیدا نشد.</string>
</resources>