<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
           android:id="@+id/grp1"
            >

        <item
                android:id="@+id/item_bookmarks"
                android:title="@string/bookmarks"
                />
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/grp2"
            >

        <item
                android:id="@+id/item_contact_us"
                android:title="@string/contact_us"
                />

        <item
                android:id="@+id/item_rules"
                android:title="@string/rules"
                android:checkable="false"
                />

        <item
                android:id="@+id/item_about_us"
                android:title="@string/about_us"/>

        <item
                android:id="@+id/item_share_us"
                android:title="@string/share_us"
                android:checkable="false"
                />

        <item
                android:id="@+id/item_support_us"
                android:title="@string/support_us"
                android:checkable="false"
                />

        <item
                android:id="@+id/item_switch_app"
                android:title="@string/switch_app"
                android:checkable="false"
                />

    </group>


    <group android:checkableBehavior="single"
           android:id="@+id/grp4"
            >

        <item
                android:id="@+id/item_nav_title_exit_app"
                android:title="@string/exit_account"
                android:checkable="false"
                />
        <item
                android:title=""
                android:orderInCategory="200"/>
    </group>


</menu>