<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="net.honarnama.sell.activity.ForgotPasswordActivity"
        android:layoutDirection="rtl"
        android:background="@color/white"
        >

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textSize="20sp"
              android:text="@string/forgot_password"
              android:gravity="right"
              android:textStyle="bold"
              android:textColor="@color/gray_extra_dark"
              android:id="@+id/forgot_password_title_text_view"
              android:layout_margin="15dp"
            />
    <View style="@style/HorizontalSeparatorLine"
          android:layout_below="@+id/forgot_password_title_text_view"
          android:id="@+id/forgot_password_header_separator_line"
            />


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textSize="16sp"
              android:text="@string/forgot_password_desc"
              android:gravity="right"
              android:textColor="@color/gray_extra_dark"
              android:id="@+id/forgot_password_subtitle_text_view"
              android:layout_margin="10dp"
              android:layout_below="@id/forgot_password_header_separator_line"
            />

    <EditText
            android:id="@+id/forgot_password_email_edit_text"
            android:inputType="textWebEmailAddress"
            android:hint="@string/username_hint"
            style="@style/edit_text_default"
            android:backgroundTint="@color/gray_extra_dark"
            android:layout_below="@id/forgot_password_subtitle_text_view"
            android:layout_margin="10dp"
            />
    <Button
            android:id="@+id/forgot_password_button"
            android:text="@string/send"
            android:layout_below="@id/forgot_password_email_edit_text"
            style="@style/sell_full_width_button"
            android:background="@color/extra_dark_green"
            android:textColor="@color/white"
            />
</RelativeLayout>
